# reinforcement-learning

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.arm64.yml  docker-compose.pandoc.yml  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt
agent/: README.md  pyproject.toml
agent/src/examples/: QLearner.py  cartpole_RL.py  cartpole_RL_DL.py  fetchReach.py  frozen_lake_RL.py  frozen_lake_q_table.npy
custom_env/: custom_env.py
doc/: ieee.csl  report.bibtex  report.md
doc/images/: rl_idea_architecture.drawio
docker/: Dockerfile  Dockerfile.arm64  Dockerfile.gpu  docker-compose.arm64.yml  docker-compose.gpu.yml  docker-compose.pandoc.yml  docker-compose.yml
handy/: handy_env_try.py  setup.py
handy/handy/: __init__.py
handy/handy/envs/: __init__.py  handy_env.py
ros/: README.md
ros/final_arm_camera_description/launch/: gazeebo.launch
ros/handy_description/: CMakeLists.txt  README.md  package.xml
ros/handy_description/launch/: display.launch  gazebo.launch  robot_state_pub.launch
ros/handy_description/urdf/: handy_description.urdf.xacro
ros/handy_environment/: CMakeLists.txt  package.xml
ros/handy_environment/launch/: gazebo-camera.launch  gazebo.launch  robot_world.launch  rviz.launch
ros/img2vec/: CMakeLists.txt  package.xml  requirements.in
ros/img2vec/launch/: img2vec.launch
ros/img2vec/msg/: ImgEmbedding.msg
ros/img2vec/scripts/: embeddings.py  img2vec.py  imgPublisher.py
ros/realsense2_custom_description/: CMakeLists.txt  README.md  package.xml
ros/realsense2_custom_description/launch/: d435_camera_model.launch
ros/realsense2_custom_description/urdf/: _d435.urdf.xacro  d435_camera.urdf.xacro
ros/state_controller/: CMakeLists.txt  README.md  package.xml  pyproject.toml
ros/state_controller/launch/: serve.launch
ros/state_controller/script/: app.py  serve-app.sh  serve-ui.sh  serve.sh
ros/state_controller/static/: index.html
ros/state_controller/ui/: README.md  package-lock.json  package.json
ros/state_controller/ui/src/routes/: +layout.svelte  +page.svelte
scripts/cosine_similarity/: cosine_similarity.py
