<?xml version="1.0" ?>
<package format="2">
  <name>handy_description</name>
  <version>0.0.0</version>
  <description
  >A custom robot description for handy that includes a camera attached to the gripper.</description>
  <maintainer email="acmiyaguchi@gatech.edu">Anthony Miyaguchi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>finalarm_description</exec_depend>
</package>
