<?xml version="1.0" ?>
<package format="2">
  <name>state_controller</name>
  <version>0.0.0</version>
  <description>Package for interfacing with the handy environment</description>
  <maintainer email="acmiyaguchi@gatech.edu">Anthony Miyaguchi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <exec_depend>roslaunch</exec_depend>
  <test_depend>ros_pytest</test_depend>
</package>
